--- a/app/global.css
+++ b/app/global.css
@@ -3,11 +3,9 @@
 @tailwind utilities;
 
 html,
-body {
+body,
+:root {
+	width: 100vw;
 	height: 100vh;
-}
-
-.shadow {
-	box-shadow: -5px -5px 15px #fcfcfc, 6px 6px 18px -14px #878787,
-		7px 6px 7px -6px rgba(0, 0, 0, 0.11);
+	@apply bg-base-dark;
 }
